Updated to newest version
I haven't played StS in a long time (since I last updated this mod), and this mod seems to be fairly unecessary now as I always had the choice to get some effects (namely 3x insta-kill & +7 max HP), but I still updated it as I might have missed something,

--- a/.classpath
+++ b/.classpath
@@ -16,9 +16,8 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="E:/GitHub/Slay the Spire mods/lib/desktop-1.0.jar"/>
 	<classpathentry kind="lib" path="E:/GitHub/Slay the Spire mods/lib/ModTheSpire.jar"/>
-	<classpathentry kind="lib" path="E:/GitHub/Slay the Spire mods/lib/BaseMod.jar"/>
+	<classpathentry kind="lib" path="E:/GitHub/Slay the Spire mods/lib/BaseMod.jar" sourcepath="E:/GitHub/Slay the Spire mods/Dependencies/BaseMod.jar"/>
 	<classpathentry kind="src" output="target/test-classes" path="src/test/java">
 		<attributes>
 			<attribute name="optional" value="true"/>
@@ -30,5 +29,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="E:/GitHub/Slay the Spire mods/lib/desktop-1.0.jar" sourcepath="E:/GitHub/Slay the Spire mods/lib/desktop-1.0.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
